# BSH_AI_Verification_System

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  mlflow.db  pyproject.toml  run_system.sh  setup_project.py  setup_project.sh
.azure-pipelines/: build-and-test.yaml  model-validation.yaml
00_business_context/: poc_criteria.md  problem_definition.md  stakeholders_map.md
01_data_engineering/configs/: drift_config.yaml
01_data_engineering/configs/great_expectations/: expectation_suite.json
01_data_engineering/src/: __init__.py  etl_pipeline.py  generate_synthetic_data.py  quality_gates.py
02_data_science_research/: README.md
03_ml_engineering/ml_pipeline/: __init__.py  evaluation.py  explainability.py  training.py
03_ml_engineering/tracking/: mlflow_config.yaml
04_governance_compliance/ethics/: fairness_check.py
04_governance_compliance/eu_ai_act/: risk_assessment.md
04_governance_compliance/model_cards/: v1_production.md
04_governance_compliance/security/: trivy_config.yaml
05_backend_system/api_service/: Dockerfile  requirements.txt
05_backend_system/api_service/app/: __init__.py  main.py  (+2 more)
05_backend_system/infrastructure/: docker-compose.yaml
06_frontend_interactive/: README.md  pubspec.yaml
06_frontend_interactive/lib/: main.dart
06_frontend_interactive/web/: index.html  manifest.json
Dukumente/: CLOUD_DEPLOYMENT.md  COMPLIANCE_AND_ETHICS.md  INTERNAL_DEVELOPER_GUIDE.md  PROJECT_HANDOVER.md
aws_terraform_infrastructure/: main.tf  provider.tf  variables.tf
azure-pipelines/: deploy-prod.yaml  security-scan.yaml
tests/: run_e2e_demo.py
(+10 files in other folders)
